5/20/11 #2885 fix: default selection of field view control should be "curve" in "Coffee" tab
5/20/11 #2885 document why this sim starts on second tab
# 1.04.01 (52200) May 19, 2011
# 1.04.00 (38010) Jan 10, 2010
1/10/10 public version for milestone "full redeploy, 2010 Q1"
# 1.03.01 (37363) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 1.03.00 (30671) Apr 21, 2009
4/21/09 Batch deploy as part of IOM milestone with revision 30670
# 1.02.05 (30260) Apr 6, 2009
# 1.02.04 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.02.03 (28799) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
11/2/08: #889, add missing credits in About dialog
# 1.02.02 (25742)
11/2/08: #888, water molecules appear briefly in lower-left corner of play area
11/2/08: [562] remove more unused code
10/31/08: [562] completed port to phetcommon trunk
10/31/08: [562] remove separate dirs for local copy of common code
10/31/08: [562] move all common graphics code to edu.colorado.phet.microwaves.common.graphics
10/31/08: [562] move application, modules & model to phetcommon trunk
10/31/08: [562] convert to Piccolo-style tabs, add piccolo-phet dependency to build properties
10/31/08: [562] delete any unused classes, including obsolete modules
10/31/08: [562] change clock to ConstantDtClock
10/?/08: [562] use a bunch of ancillary classes from phetcommon trunk, delete local copies
# 1.02.01 (25321)
10/14/08: [562] publish 1.02.01 before starting port to phetcommon trunk